--- a/src/app/panel.html
+++ b/src/app/panel.html
@@ -169,8 +169,10 @@
         <div class="component device-property-content">
           <div><span class="key">position:</span> <span class="value" id="rightControllerPosition"></span></div>
           <div><span class="key">rotation:</span> <span class="value" id="rightControllerRotation"></span></div>
-          <div><button class="trigger-button" id="rightSelectButton">select button</button></div>
-          <div><button class="trigger-button" id="rightSqueezeButton">squeeze button</button></div>
+          <div><button class="trigger-button" id="rightSelectButton">trigger button</button></div>
+          <div><button class="trigger-button" id="rightSqueezeButton">grip button</button></div>
+          <div><button class="trigger-button" id="rightAXButton">a button</button></div>
+          <div><button class="trigger-button" id="rightBYButton">b button</button></div>
         </div>
       </div>
       <div id="leftControllerComponent" class="component device-property-component">
@@ -178,8 +180,10 @@
         <div class="component device-property-content">
           <div><span class="key">position:</span> <span class="value" id="leftControllerPosition"></span></div>
           <div><span class="key">rotation:</span> <span class="value" id="leftControllerRotation"></span></div>
-          <div><button class="trigger-button" id="leftSelectButton">select button</button></div>
-          <div><button class="trigger-button" id="leftSqueezeButton">squeeze button</button></div>
+          <div><button class="trigger-button" id="leftSelectButton">trigger button</button></div>
+          <div><button class="trigger-button" id="leftSqueezeButton">grip button</button></div>
+          <div><button class="trigger-button" id="leftAXButton">x button</button></div>
+          <div><button class="trigger-button" id="leftBYButton">y button</button></div>
         </div>
       </div>
     </div>
