--- a/src/app/panel.html
+++ b/src/app/panel.html
@@ -170,7 +170,8 @@
           <div><span class="key">position:</span> <span class="value" id="rightControllerPosition"></span></div>
           <div><span class="key">rotation:</span> <span class="value" id="rightControllerRotation"></span></div>
           <div><button class="trigger-button" id="rightSelectButton">trigger button</button></div>
-          <div><button class="trigger-button" id="rightSqueezeButton">grip button</button></div>
+          <div><button class="trigger-button" id="rightSqueezeButton">squeeze button</button></div>
+          <div><button class="trigger-button" id="rightThumbstickButton">thumbstick button</button></div>
           <div><button class="trigger-button" id="rightAXButton">a button</button></div>
           <div><button class="trigger-button" id="rightBYButton">b button</button></div>
         </div>
@@ -181,7 +182,8 @@
           <div><span class="key">position:</span> <span class="value" id="leftControllerPosition"></span></div>
           <div><span class="key">rotation:</span> <span class="value" id="leftControllerRotation"></span></div>
           <div><button class="trigger-button" id="leftSelectButton">trigger button</button></div>
-          <div><button class="trigger-button" id="leftSqueezeButton">grip button</button></div>
+          <div><button class="trigger-button" id="leftSqueezeButton">squeeze button</button></div>
+          <div><button class="trigger-button" id="leftThumbstickButton">thumbstick button</button></div>
           <div><button class="trigger-button" id="leftAXButton">x button</button></div>
           <div><button class="trigger-button" id="leftBYButton">y button</button></div>
         </div>
