--- a/src/app/panel.html
+++ b/src/app/panel.html
@@ -171,9 +171,13 @@
           <div><span class="key">rotation:</span> <span class="value" id="rightControllerRotation"></span></div>
           <div><button class="trigger-button" id="rightSelectButton">trigger button</button></div>
           <div><button class="trigger-button" id="rightSqueezeButton">squeeze button</button></div>
-          <div><button class="trigger-button" id="rightThumbstickButton">thumbstick button</button></div>
           <div><button class="trigger-button" id="rightAXButton">a button</button></div>
           <div><button class="trigger-button" id="rightBYButton">b button</button></div>
+          <div><button class="trigger-button" id="rightThumbstickButton">thumbstick button</button></div>
+          <div><button class="trigger-button" id="rightUpButton">thumbstick up</button></div>
+          <div><button class="trigger-button" id="rightDownButton">thumbstick down</button></div>
+          <div><button class="trigger-button" id="rightLeftButton">thumbstick left</button></div>
+          <div><button class="trigger-button" id="rightRightButton">thumbstick right</button></div>
         </div>
       </div>
       <div id="leftControllerComponent" class="component device-property-component">
@@ -183,9 +187,13 @@
           <div><span class="key">rotation:</span> <span class="value" id="leftControllerRotation"></span></div>
           <div><button class="trigger-button" id="leftSelectButton">trigger button</button></div>
           <div><button class="trigger-button" id="leftSqueezeButton">squeeze button</button></div>
-          <div><button class="trigger-button" id="leftThumbstickButton">thumbstick button</button></div>
           <div><button class="trigger-button" id="leftAXButton">x button</button></div>
           <div><button class="trigger-button" id="leftBYButton">y button</button></div>
+          <div><button class="trigger-button" id="leftThumbstickButton">thumbstick button</button></div>
+          <div><button class="trigger-button" id="leftUpButton">thumbstick up</button></div>
+          <div><button class="trigger-button" id="leftDownButton">thumbstick down</button></div>
+          <div><button class="trigger-button" id="leftLeftButton">thumbstick left</button></div>
+          <div><button class="trigger-button" id="leftRightButton">thumbstick right</button></div>
         </div>
       </div>
     </div>
